[tool.poetry]
name = "ff"
version = "2.0.0"
description = ""
authors = ["Retzudo"]

[tool.poetry.dependencies]
python = "^3.5"
flask = "^1.0"
requests = "^2.22"
beautifulsoup4 = "^4.7"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
